WIP: workspace with movabe widgets

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div class="layout">
   <app-header class="header"></app-header>
-  <app-layout class="content"></app-layout>
+  <app-pane class="content"></app-pane>
 </div>
