--- a/frontend/src/styles/styles.less
+++ b/frontend/src/styles/styles.less
@@ -2,6 +2,7 @@
 @import './colors.less';
 @import './icons.less';
 @import './actions.less';
+@import './constants.less';
 
 html {
   font-size: 16px;
@@ -14,7 +15,7 @@ html {
 }
 
 body {
-  padding: 8px;
+  padding: @body-padding;
   margin: 0;
   border: 0;
 
