--- a/frontend/src/app/notes-view/components/note-view/note-view.component.html
+++ b/frontend/src/app/notes-view/components/note-view/note-view.component.html
@@ -1,7 +1,7 @@
 <div class="note-view" *ngIf="note">
   <div class="note-title section-secondary">
     <i class="icon link link-indicator-icon" *ngIf="note.isLink"></i>
-    <div #noteTitle class="input" contenteditable [innerHTML]="(sourceNote || note).title | markHTMLsafe" (keydown)="supportTitleHotkeys($event); syncTitleDebounced();"></div>
+    <div #noteTitle class="input" contenteditable [innerHTML]="(sourceNote || note).title | markHTMLsafe" (keydown)="supportTitleHotkeys($event);"></div>
   </div>
 
   <div class="note-variables section-secondary">
@@ -9,7 +9,7 @@
   </div>
 
   <div class="note-content section-secondary">
-    <pre #noteContent class="input" contenteditable [innerHTML]="(sourceNote || note).content | markHTMLsafe" (keydown)="supportContentHotkeys($event); syncContentDebounced();"></pre>
+    <pre #noteContent class="input" contenteditable [innerHTML]="(sourceNote || note).content | markHTMLsafe" (keydown)="supportContentHotkeys($event);"></pre>
   </div>
 
   <div class="note-actions section-secondary">
